First commited as before_7603_rev1